# SEFIatHome

./: .gitignore  AGENTS.md  CLAUDE.md  RESUME.md  ROADMAP.md  epstein-files-research-paths.md  orchestrator.sh  prd.json  progress.txt  pyproject.toml  ralph.sh  scan-stubs.sh  sefi-at-home.jsx
.claude/skills-sefi-archive/distributed-systems/: SKILL.md
.claude/skills-sefi-archive/maintainability/: SKILL.md
.claude/skills-sefi-archive/prd/: SKILL.md
.claude/skills-sefi-archive/programmer/: SKILL.md
.claude/skills-sefi-archive/project-manager/: SKILL.md
.claude/skills-sefi-archive/reliability/: SKILL.md
.claude/skills-sefi-archive/tester/: SKILL.md
.claude/skills-sefi-archive/troubleshoot/: SKILL.md
.claude/skills/committer/: SKILL.md
.claude/skills/decomposer/: SKILL.md
.claude/skills/git-expert/: SKILL.md
data/: FETCH.md  sample_claims.json
docs/: WORKFLOW.md
docs/api/: api-main.md  api-models.md  api-routes.md  config.md  db-adapter.md  db-efta.md  db-ingest.md  generator-units.md  store-findings.md  validation-layer.md
plans/: requirements.md
src/sefi/: __init__.py  config.py
src/sefi/api/: main.py  (+3 more)
tests/: __init__.py
tests/integration/: __init__.py  test_lifecycle.py
tests/unit/: __init__.py  test_adapter.py  test_api.py  test_efta.py  test_findings_store.py  test_ingest.py  test_units_decision_chain.py  test_units_verify.py  test_us001_scaffolding.py  test_validation.py
todo/: SUMMARY.md  US-001.md  US-002.md  US-003.md  US-004.md  US-005.md  US-006.md  US-007.md  US-008.md  US-009.md  US-010.md  US-011.md  US-012.md  fix_plan.md
(+24 files in other folders)
