[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sefi-at-home"
version = "0.1.0"
description = "SEFI@Home — Distributed analysis platform for the DOJ Epstein Files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0-1.0" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pydocstyle>=6.3.0",
    "types-requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
files = ["src"]

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"
match_dir = "[^\\.].*"
